# Course_Work_4

./: README.md  config.py  main.py  pyproject.toml
data/: from_hh_to.json
src/: debug_users_json.py  hh_connection.py  hh_errors_debug.py  input_forms.py  json_saver.py  main.py  sorted_vacancies.py  user_interaction.py  utils.py  vacancies.py  vacancyAPI.py  vacancy_class.py
tests/: test_hh_connection.py  test_sorted_vacancies.py  test_vacancies.py
